--- a/public/Dashboard/Acerca/historia.html
+++ b/public/Dashboard/Acerca/historia.html
@@ -226,7 +226,7 @@
         <!-- End of Topbar -->
 
         <!-- Begin Page Content -->
-        <div class="container-fluid">
+        <div class="container-fluid" style="max-width: 900px;">
 
           <h1 class="h1">A nossa história</h1>
           <p class="h5 my-4">
