--- a/public/Dashboard/Acerca/historia.html
+++ b/public/Dashboard/Acerca/historia.html
@@ -247,6 +247,10 @@
             família e com os vossos amigos para divulgar o nosso trabalho e o clube.
           </p>
 
+          
+
+          <img src="/static/img/IMG-20200615-WA0002.jpg" class="img-fluid" alt="Responsive image">
+
         </div>
         <!-- End Page Content -->
 
